Bug 449362 - "Table border is rendered incorrectly when the table cell size changes due to javascript." [r+sr=roc]