layout/generic/nsFrame.h
@@ -379,17 +379,13 @@ public:
 
   /**
    * Helper method to invalidate portions of a standard container frame if the
-   * reflow state indicates that the size has changed (specifically border,
+   * desired size indicates that the size has changed (specifically border,
    * background and outline).
    * We assume that the difference between the old frame area and the new
    * frame area is invalidated by some other means.
-   * @param aPresContext the presentation context
    * @param aDesiredSize the new size of the frame
-   * @param aReflowState the reflow that was just done on this frame
    */
-  void CheckInvalidateSizeChange(nsPresContext*          aPresContext,
-                                 nsHTMLReflowMetrics&     aDesiredSize,
-                                 const nsHTMLReflowState& aReflowState);
+  void CheckInvalidateSizeChange(nsHTMLReflowMetrics&     aNewDesiredSize);
 
   // Helper function that tests if the frame tree is too deep; if it
   // is it marks the frame as "unflowable" and zeros out the metrics
